; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_paravirt.c_paravirt_patch_jmp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_paravirt.c_paravirt_patch_jmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.branch = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @paravirt_patch_jmp(i8* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.branch*, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.branch*
  store %struct.branch* %13, %struct.branch** %10, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = ptrtoint i8* %14 to i64
  %16 = load i64, i64* %8, align 8
  %17 = add i64 %16, 5
  %18 = sub i64 %15, %17
  store i64 %18, i64* %11, align 8
  %19 = load i32, i32* %9, align 4
  %20 = icmp ult i32 %19, 5
  br i1 %20, label %21, label %23

21:                                               ; preds = %4
  %22 = load i32, i32* %9, align 4
  store i32 %22, i32* %5, align 4
  br label %29

23:                                               ; preds = %4
  %24 = load %struct.branch*, %struct.branch** %10, align 8
  %25 = getelementptr inbounds %struct.branch, %struct.branch* %24, i32 0, i32 0
  store i32 233, i32* %25, align 8
  %26 = load i64, i64* %11, align 8
  %27 = load %struct.branch*, %struct.branch** %10, align 8
  %28 = getelementptr inbounds %struct.branch, %struct.branch* %27, i32 0, i32 1
  store i64 %26, i64* %28, align 8
  store i32 5, i32* %5, align 4
  br label %29

29:                                               ; preds = %23, %21
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
